RESOLVED FIXED55442
webarchives don't contain subframe content
https://bugs.webkit.org/show_bug.cgi?id=55442
Summary webarchives don't contain subframe content
Alice Liu
Reported 2011-02-28 19:27:04 PST
WebPage::getWebArchiveOfFrame doesn't seem to generate any content for subframes in the resulting webarchive. This is because we're calling the wrong LegacyWebArchive::create() function (there are 7). We're calling the one that takes a Frame* whereas we should be calling the one that takes a Node*. Doing so will match old WebKit behaviour in -[DOMNode(WebDOMNodeOperations) webArchive] steps to repro: 1) create a webarchive for your facebook.com (logged in) homepage. <rdar://problem/8994125>
Attachments
patch (1.53 KB, patch)
2011-02-28 19:32 PST, Alice Liu
barraclough: review+
Alice Liu
Comment 1 2011-02-28 19:32:11 PST
Created attachment 84175 [details] patch Brady Eidson (beidson) has approved this change in-person.
Gavin Barraclough
Comment 2 2011-02-28 19:39:27 PST
Comment on attachment 84175 [details] patch r+ since this changes behaviour to match webkit1. But it seems like LegacyWebArchive::create should have the same behaviour whether it is passed the frame or the document I think this is likely either a bug, or a case for a function to be renamed to make this clearer. We should probably open a new bug to track this issue.
Alice Liu
Comment 3 2011-02-28 20:25:24 PST
Alice Liu
Comment 4 2011-02-28 20:28:35 PST
Note You need to log in before you can comment on or make changes to this bug.