https://bugs.webkit.org/show_bug.cgi?id=55442 Webarchives don't contain subframe content

Reviewed by Gavin Barraclough.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::getWebArchiveOfFrame):
Pass the frame's document instead of just the frame, to use a different LegacyWebArchive::create function.



Canonical link: https://commits.webkit.org/69862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79965 268f45cc-cd09-0410-ab3c-d52691b4dbfc